# kitchenowl-mcp

./: .env.example  CLAUDE.md  Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/plans/: google-oauth.md
scripts/: setup_recipes.py
src/kitchenowl_mcp/: auth.py  client.py  config.py  server.py  state.py
src/kitchenowl_mcp/tools/: meal_plan.py  recipes.py  shopping.py
tests/: conftest.py  test_imports.py
